gccida/c3/simplify_binary_operation
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/simplify_binary_operation/src/simplify-rtx.c:1335:33: error: must use 'enum' tag to refer to type 'rtx_code'
rtx  simplify_binary_operation( rtx_code code, machine_mode mode, rtx op0, rtx op1) 
                                ^
                                enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/simplify_binary_operation/src/simplify-rtx.c:1335:48: error: must use 'enum' tag to refer to type 'machine_mode'
rtx  simplify_binary_operation( rtx_code code, machine_mode mode, rtx op0, rtx op1) 
                                               ^
                                               enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/simplify_binary_operation/src/simplify-rtx.c:1340:4: error: expected ';' after expression
rtx v9; // r12 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/simplify_binary_operation/src/simplify-rtx.c:1340:5: error: use of undeclared identifier 'v9'
rtx v9; // r12 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/simplify_binary_operation/src/simplify-rtx.c:1342:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode pool_mode; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/simplify_binary_operation/src/simplify-rtx.c:1343:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v12; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/simplify_binary_operation/src/simplify-rtx.c:1344:4: error: expected ';' after expression
rtx v13; // r12 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/simplify_binary_operation/src/simplify-rtx.c:1344:5: error: use of undeclared identifier 'v13'; did you mean 'v12'?
rtx v13; // r12 
    ^~~
    v12
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/simplify_binary_operation/src/simplify-rtx.c:1343:14: note: 'v12' declared here
machine_mode v12; // edi 
             ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/simplify_binary_operation/src/simplify-rtx.c:1347:4: error: expected ';' after expression
rtx v16; // r13 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/simplify_binary_operation/src/simplify-rtx.c:1347:5: error: use of undeclared identifier 'v16'
rtx v16; // r13 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/simplify_binary_operation/src/simplify-rtx.c:1348:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v17; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/simplify_binary_operation/src/simplify-rtx.c:1349:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v18; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/simplify_binary_operation/src/simplify-rtx.c:1350:4: error: expected ';' after expression
rtx v19; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/simplify_binary_operation/src/simplify-rtx.c:1350:5: error: use of undeclared identifier 'v19'
rtx v19; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/simplify_binary_operation/src/simplify-rtx.c:1352:4: error: expected ';' after expression
rtx v21; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/simplify_binary_operation/src/simplify-rtx.c:1352:5: error: use of undeclared identifier 'v21'; did you mean 'v20'?
rtx v21; // rax 
    ^~~
    v20
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/simplify_binary_operation/src/simplify-rtx.c:1351:6: note: 'v20' declared here
char v20; // al 
     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/simplify_binary_operation/src/simplify-rtx.c:1360:4: error: expected ';' after expression
rtx result; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/simplify_binary_operation/src/simplify-rtx.c:1360:5: error: use of undeclared identifier 'result'
rtx result; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/simplify_binary_operation/src/simplify-rtx.c:1384:4: error: expected ';' after expression
rtx v53; // rax 
   ^
   ;
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/simplify_binary_operation/src/obj/simplify-rtx.o] Error 1
